# cfb-analytics

./: .gitignore  README.md
ad_hoc_analysis/: 2019_pbp_analysis.ipynb
data_extraction/: README.md  requirements.txt
data_extraction/scripts/: map_cfbd_pbp.py  play_stat_test.py  pull_cfbd.py
data_transformation/: Makefile  README.md  cfb_player_definitions.yml  players_defense_data_dictionary.csv  players_defense_schema_header.csv  players_passing_data_dictionary.csv  players_passing_schema_header.csv  players_receiving_data_dictionary.csv  players_receiving_schema_header.csv  players_rushing_data_dictionary.csv  players_rushing_schema_header.csv  pyproject.toml  requirements.txt
data_transformation/data/processed/2019/: players_passing_2019.csv
data_transformation/definitions/: cfb_player_definitions.yml
data_transformation/scripts/: build_2019.py  build_range.py
data_transformation/src/cfb_analytics/: config.py  ep_model.py  validation.py
data_transformation/src/cfb_analytics/etl/: __init__.py  common.py  defense.py  passing.py  receiving.py  rushing.py
transfer_list/Archive/: cfb_transfers_master_20250904_201029.csv  cfb_transfers_master_20250904_201642.csv  cfb_transfers_master_20250904_202342.csv  cfb_transfers_master_20250904_203115.csv  cfb_transfers_master_20250904_204014.csv  cfb_transfers_master_20250904_204917.csv  cfb_transfers_master_20250904_205831.csv  cfb_transfers_master_20250904_210829.csv  cfb_transfers_master_20250904_211740.csv  cfb_transfers_master_20250904_212717.csv  cfb_transfers_master_20250904_214423.csv  (+46 more)
(+3 files in other folders)
